fixed project layout on mobile

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -20,7 +20,7 @@
   line-height: 2.5rem;
   margin: 0.5rem 1.5rem 1.5rem 1.5rem;
   font-size: 1.8rem;
-  @media only screen and (max-width: 35.6em) {
+  @media only screen and (max-width: 36.2em) {
     font-size: 1.6rem;
   }
 }
@@ -32,7 +32,7 @@
   @media only screen and(max-width: 52em) {
     font-size: 2.8rem;
   }
-  @media only screen and (max-width: 35.6em) {
+  @media only screen and (max-width: 36.2em) {
     font-size: 2.5rem;
   }
 }
@@ -43,7 +43,7 @@
   @media only screen and(max-width: 52em) {
     font-size: 4.5rem;
   }
-  @media screen and (max-width: 35.6em) {
+  @media only screen and (max-width: 36.2em) {
     font-size: 3.4rem;
   }
 }
