--- a/src/sass/_burger.scss
+++ b/src/sass/_burger.scss
@@ -4,7 +4,7 @@
   height: 5rem;
   width: 100%;
   background-color: darken($dark-primary-color, 15%);
-  @media only screen and(min-width: 35.6em) {
+  @media only screen and (min-width: 36.2em) {
     display: none;
   }
 }
