--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -2,14 +2,13 @@
   display: flex;
   justify-content: flex-end;
   background-color: $dark-primary-color;
-  align-items: center;
-  @media only screen and(max-width: 35.6em) {
+  @media only screen and (max-width: 36.2em) {
     flex-flow: column nowrap;
   }
 }
 
 .nav {
-  @media only screen and(max-width: 35.6em) {
+  @media only screen and (max-width: 36.2em) {
     display: none;
   }
   &-list {
@@ -28,7 +27,7 @@
   &-item {
     padding: 1rem;
     font-size: 1.8rem;
-    @media only screen and(max-width: 35.6em) {
+    @media only screen and (max-width: 36.2em) {
       text-align: center;
     }
     &:hover {
