--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -3,8 +3,8 @@
 }
 
 .project {
-  width: 26rem;
-  height: 26rem;
+  width: 100%;
+  height: 100%;
   img {
     width: 100%;
     height: 100%;
@@ -13,6 +13,10 @@
     &:hover {
       opacity: 1;
     }
+  }
+  @media only screen and (max-width: 36.2em) {
+    max-height: 25rem;
+    max-width: 25rem;
   }
 }
 
